--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <title>Broadway Design</title>
   </head>
   <body>
+    <!--Header Section-->
+
+    <!--Navigation Section-->
+
+    <!--Process Section-->
+
+    <!--Info Section-->
+
+    <!--Footer Section-->
 
   </body>
 </html>
