--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <!--Header Section-->
-
+    <h1>Broadway Design</h1>
     <!--Navigation Section-->
 
     <!--Process Section-->
