--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
   <body>
     <!--Header Section-->
     <h1>Broadway Design</h1>
+    
     <!--Navigation Section-->
+    <nav>
+      <p><a>Home</a></p>
+      <p><a>About</a></p>
+      <p><a>Work</a></p>
+      <p><a>Team</a></p>
+      <p><a>Contact</a></p>
+    <nav>
 
     <!--Process Section-->
 
