Add process section

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <!--Header Section-->
     <h1>Broadway Design</h1>
-    
+
     <!--Navigation Section-->
     <nav>
       <p><a>Home</a></p>
@@ -18,6 +18,16 @@
     <nav>
 
     <!--Process Section-->
+    <h2>Our Process</h2>
+    <img src="./resources/images/identify.svg" alt="Curly arrow"/>
+    <h3>identify</h3>
+    <p>We focus on the most important details.</p>
+    <img src="./resources/images/understand.svg" alt="Two circling arrows"/>
+    <h3>Understand</h3>
+    <p>We study our projects inside and out.</p>
+    <img src="./resources/images/execute.svg" alt="3D arrow">
+    <h3>Execute</h3>
+    <p>We put everything we have into our work.</p>
 
     <!--Info Section-->
 
