--- a/index.html
+++ b/index.html
@@ -30,8 +30,21 @@
     <p>We put everything we have into our work.</p>
 
     <!--Info Section-->
+    <h3>Designed in New York</h3>
+    <h3>Portfolio</h3>
+    <p>Coming Soon</p>
+    <h3>Team</h3>
+    <p>We're Hiring!</p>
+    <h3>Contact</h3>
+    <p>Phone: (555)-555-5555</p>
+    <p>Email: test@example.com</p>
+    <p>Twitter: @test</p>
 
     <!--Footer Section-->
+    <footer>
+      <p>&copy</p>
+
+    </footer>
 
   </body>
 </html>
