Add footer section

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Broadway Design</title>
+    <link rel="stylesheet" href="./resources/css/style.css" type="text/css">
   </head>
   <body>
-    <!--Header Section-->
+    <!--Heading Section-->
     <h1>Broadway Design</h1>
 
     <!--Navigation Section-->
@@ -42,8 +43,15 @@
 
     <!--Footer Section-->
     <footer>
-      <p>&copy</p>
-
+      <p>&copy Broadway 2016
+        <nav>
+          <a>Home</a>
+          <a>About</a>
+          <a>Work</a>
+          <a>Team</a>
+          <a>Contact</a>
+        </nav>
+      </p>
     </footer>
 
   </body>
