--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   </head>
   <body>
     <!--Heading Section-->
-    <h1>Broadway Design</h1>
+    <h1 class="white" class="flatiron">Broadway Design</h1>
 
     <!--Navigation Section-->
-    <nav>
+    <nav class="white" class="flatiron">
       <p><a>Home</a></p>
       <p><a>About</a></p>
       <p><a>Work</a></p>
@@ -31,7 +31,7 @@
     <p>We put everything we have into our work.</p>
 
     <!--Info Section-->
-    <h3>Designed in New York</h3>
+    <h3 class="white" class="flatiron">Designed in New York</h3>
     <h3>Portfolio</h3>
     <p>Coming Soon</p>
     <h3>Team</h3>
@@ -44,7 +44,7 @@
     <!--Footer Section-->
     <footer>
       <p>&copy Broadway 2016
-        <nav>
+        <nav class="white" id="foot">
           <a>Home</a>
           <a>About</a>
           <a>Work</a>
