--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
     <p>Twitter: @test</p>
 
     <!--Footer Section-->
-    <footer>
+    <footer class="white" class="foot">
       <p>&copy Broadway 2016
-        <nav class="white" id="foot">
+        <nav>
           <a>Home</a>
           <a>About</a>
           <a>Work</a>
