--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <p>Twitter: @test</p>
 
     <!--Footer Section-->
-    <footer class="white" class="foot">
+    <footer class="white" id="foot">
       <p>&copy Broadway 2016
         <nav>
           <a>Home</a>
