--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
     <p>Twitter: @test</p>
 
     <!--Footer Section-->
-    <footer class="white" id="foot">
-      <p>&copy Broadway 2016
+    <footer>
+      <p class="white" id="foot">&copy Broadway 2016
         <nav>
           <a>Home</a>
           <a>About</a>
