Fix footer navigation

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 
     <!--Footer Section-->
     <footer>
-      <p class="white" id="foot">&copy Broadway 2016
-        <nav>
+      <p class="white" class="foot">&copy Broadway 2016
+        <nav class="white" class="foot">
           <a>Home</a>
           <a>About</a>
           <a>Work</a>
