--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <p>Twitter: @test</p>
 
     <!--Footer Section-->
-    <footer>
+    <footer id="footwhite">
       <p class="white" class="foot">&copy Broadway 2016
         <nav class="white" class="foot">
           <a>Home</a>
