--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   </head>
   <body>
     <!--Heading Section-->
-    <h1 class="white" class="flatiron">Broadway Design</h1>
+    <h1>Broadway Design</h1>
 
     <!--Navigation Section-->
-    <nav class="white" class="flatiron">
+    <nav>
       <p><a>Home</a></p>
       <p><a>About</a></p>
       <p><a>Work</a></p>
@@ -26,12 +26,12 @@
     <img src="./resources/images/understand.svg" alt="Two circling arrows"/>
     <h3>Understand</h3>
     <p>We study our projects inside and out.</p>
-    <img src="./resources/images/execute.svg" alt="3D arrow">
+    <images src="./resources/images/execute.svg" alt="3D arrow">
     <h3>Execute</h3>
     <p>We put everything we have into our work.</p>
 
     <!--Info Section-->
-    <h3 class="white" class="flatiron">Designed in New York</h3>
+    <h3>Designed in New York</h3>
     <h3>Portfolio</h3>
     <p>Coming Soon</p>
     <h3>Team</h3>
@@ -42,9 +42,9 @@
     <p>Twitter: @test</p>
 
     <!--Footer Section-->
-    <footer id="footwhite">
-      <p class="white" class="foot">&copy Broadway 2016
-        <nav class="white" class="foot">
+    <footer>
+      <p>&copy Broadway 2016
+        <nav>
           <a>Home</a>
           <a>About</a>
           <a>Work</a>
