Fix footer line break hopefully

--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
     <!--Footer Section-->
     <footer>
       <p>&copy Broadway 2016
-        <nav>
+        <!--Footer Navigation-->
           <a>Home</a>
           <a>About</a>
           <a>Work</a>
           <a>Team</a>
           <a>Contact</a>
-        </nav>
+        <!--^Footer Navigation^-->
       </p>
     </footer>
 
