--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <p>Twitter: @test</p>
 
     <!--Footer Section-->
-    <footer>
+    <footer class="white">
       <p>&copy Broadway 2016
         <!--Footer Navigation-->
           <a>Home</a>
