--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
     <p>Twitter: @test</p>
 
     <!--Footer Section-->
-    <footer class="white">
-      <p>&copy Broadway 2016
+    <footer class="gray">
+      <p class="white">&copy Broadway 2016
         <!--Footer Navigation-->
           <a>Home</a>
           <a>About</a>
