Add footer text align

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <!--Footer Section-->
     <footer class="gray">
-      <p class="white">&copy Broadway 2016
+      <p class="footwhite">&copy Broadway 2016
         <!--Footer Navigation-->
           <a>Home</a>
           <a>About</a>
