Add footer font-size

--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
     <footer class="gray">
       <p class="footwhite">&copy Broadway 2016
         <!--Footer Navigation-->
-          <a>Home</a>
-          <a>About</a>
-          <a>Work</a>
-          <a>Team</a>
-          <a>Contact</a>
+          <a href="#">Home</a>
+          <a href="#">About</a>
+          <a href="#">Work</a>
+          <a href="#">Team</a>
+          <a href="#">Contact</a>
         <!--^Footer Navigation^-->
       </p>
     </footer>
