Fix footer font-size

--- a/index.html
+++ b/index.html
@@ -43,15 +43,13 @@
 
     <!--Footer Section-->
     <footer class="gray">
-      <p class="footwhite">&copy Broadway 2016
+      <p class="footwhite">&copy Broadway 2016</p>
         <!--Footer Navigation-->
           <a href="#">Home</a>
           <a href="#">About</a>
           <a href="#">Work</a>
           <a href="#">Team</a>
           <a href="#">Contact</a>
-        <!--^Footer Navigation^-->
-      </p>
     </footer>
 
   </body>
