--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
     <!--Navigation Section-->
     <nav>
-      <p><a>Home</a></p>
-      <p><a>About</a></p>
-      <p><a>Work</a></p>
-      <p><a>Team</a></p>
+      <p><a href="#">Home</a></p>
+      <p><a href="#">About</a></p>
+      <p><a href="#">Work</a></p>
+      <p><a href="#">Team</a></p>
       <p><a>Contact</a></p>
     <nav>
 
