--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <img src="./resources/images/understand.svg" alt="Two circling arrows"/>
     <h3>Understand</h3>
     <p>We study our projects inside and out.</p>
-    <images src="./resources/images/execute.svg" alt="3D arrow">
+    <images src="resources/images/execute.svg" alt="3D arrow">
     <h3>Execute</h3>
     <p>We put everything we have into our work.</p>
 
