--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <p>We put everything we have into our work.</p>
 
     <!--Info Section-->
-    <h3>Designed in New York</h3>
+    <h3 id="nyc">Designed in New York</h3>
     <h3>Portfolio</h3>
     <p>Coming Soon</p>
     <h3>Team</h3>
