--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!--Process Section-->
     <h2>Our Process</h2>
     <img src="./resources/images/identify.svg" alt="Curly arrow"/>
-    <h3>identify</h3>
+    <h3>Identify</h3>
     <p>We focus on the most important details.</p>
     <img src="./resources/images/understand.svg" alt="Two circling arrows"/>
     <h3>Understand</h3>
