--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Broadway Design</h1>
 
     <!--Navigation Section-->
-    <nav>
+    <nav class="headnav">
       <p><a href="#">Home</a></p>
       <p><a href="#">About</a></p>
       <p><a href="#">Work</a></p>
