--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <h1>Broadway Design</h1>
 
     <!--Navigation Section-->
-    <nav class="headnav">
-      <p><a href="#">Home</a></p>
-      <p><a href="#">About</a></p>
-      <p><a href="#">Work</a></p>
-      <p><a href="#">Team</a></p>
-      <p><a>Contact</a></p>
+    <nav>
+      <p class="headnav"><a href="#">Home</a></p>
+      <p class="headnav"><a href="#">About</a></p>
+      <p class="headnav"><a href="#">Work</a></p>
+      <p class="headnav"><a href="#">Team</a></p>
+      <p class="headnav"><a>Contact</a></p>
     <nav>
 
     <!--Process Section-->
