--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
   </head>
   <body>
     <!--Heading Section-->
-    <h1>Broadway Design</h1>
-
-    <!--Navigation Section-->
-    <nav>
-      <p class="headnav"><a href="#">Home</a></p>
-      <p class="headnav"><a href="#">About</a></p>
-      <p class="headnav"><a href="#">Work</a></p>
-      <p class="headnav"><a href="#">Team</a></p>
-      <p class="headnav"><a>Contact</a></p>
-    <nav>
+    <header>
+      <h1>Broadway Design</h1>
+      <!--Navigation Section-->
+      <nav>
+        <p><a href="#">Home</a></p>
+        <p><a href="#">About</a></p>
+        <p><a href="#">Work</a></p>
+        <p><a href="#">Team</a></p>
+        <p><a>Contact</a></p>
+      <nav>
+    </header>
 
     <!--Process Section-->
     <h2>Our Process</h2>
