--- a/index.html
+++ b/index.html
@@ -42,15 +42,9 @@
     <p>Email: test@example.com</p>
     <p>Twitter: @test</p>
 
-    <!--Footer Section-->
+    <!--Footer Navigation Section-->
     <footer class="gray">
-      <p class="footwhite">&copy Broadway 2016</p>
-        <!--Footer Navigation-->
-          <a href="#">Home</a>
-          <a href="#">About</a>
-          <a href="#">Work</a>
-          <a href="#">Team</a>
-          <a href="#">Contact</a>
+      <p class="footwhite">&copy Broadway 2016 <a href="#">Home</a> <a href="#">About</a> <a href="#">Work</a> <a href="#">Team</a> <a href="#">Contact</a></p>
     </footer>
 
   </body>
