Clean styles eight

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     <p>Twitter: @test</p>
 
     <!--Footer Navigation Section-->
-    <footer class="gray">
-      <p class="footwhite">&copy Broadway 2016 <a href="#">Home</a> <a href="#">About</a> <a href="#">Work</a> <a href="#">Team</a> <a href="#">Contact</a></p>
+    <footer id="gray">
+      <p id="footwhite">&copy Broadway 2016 <a href="#">Home</a> <a href="#">About</a> <a href="#">Work</a> <a href="#">Team</a> <a href="#">Contact</a></p>
     </footer>
 
   </body>
