--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <link rel="stylesheet" href="./resources/css/style.css" type="text/css">
   </head>
   <body>
-    <!--Heading Section-->
+    <!--Heading Navigation Section-->
     <header>
       <h1>Broadway Design</h1>
-      <!--Navigation Section-->
       <nav>
         <p><a href="#">Home</a></p>
         <p><a href="#">About</a></p>
